@@ -178,16 +178,6 @@
       <height>31</height>
      </rect>
     </property>
-    <item>
-     <property name="text">
-      <string>key</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string>keyfile</string>
-     </property>
-    </item>
    </widget>
   </widget>
   <widget class="QComboBox" name="comboBoxFS">
@@ -408,16 +398,6 @@
       <height>31</height>
      </rect>
     </property>
-    <item>
-     <property name="text">
-      <string>key</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string>keyfile</string>
-     </property>
-    </item>
    </widget>
   </widget>
   <widget class="QComboBox" name="comboBoxOptions">
